syntax = "proto3";

package comment;

import "idl/rpc.proto";

option go_package = "douyin-easy/grpc_gen/comment;comment";

message Comment {
  int64 id = 1;
  int64 user_id = 3;
  string content = 4;
  int64 created_at = 5;
}

message CreateCommentRequest {
  int64 video_id = 1;
  int64 user_id = 2;
  string content = 3;
}

message CreateCommentResponse {
  Comment comment = 1;
  rpc.BaseResponse base_response = 2;
}

message DeleteCommentRequest {
  int64 id = 1;
  int64 user_id = 2;
  int64 video_id = 3;
}

message DeleteCommentResponse {
  rpc.BaseResponse base_response = 1;
}

message QueryCommentsRequest {
  int64 video_id = 1;
}

message QueryCommentsResponse {
  repeated Comment comment_list = 1;
  rpc.BaseResponse base_response = 2;
}

service CommentManagement {

  rpc CreateComment(CreateCommentRequest) returns (CreateCommentResponse) {}

  rpc DeleteComment(DeleteCommentRequest) returns (DeleteCommentResponse) {}

  rpc QueryComments(QueryCommentsRequest) returns (QueryCommentsResponse) {}

}


